# bitwrench

./: .eslintrc.json  .gitignore  .travis.yml  ABOUT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README-original.md  README.md  RELEASE-PROCEDURE.md  TRADEMARK  bitwrench.css  bitwrench.js  bitwrench.js_sri.txt  bitwrench.min.js  bitwrench.min.js_sri.txt  bitwrench_ESM.js  bitwrench_ESM.min.js  eslint.config.js  index.html  karma.conf.js  makefile  package-lock.json  package.json  playwright.config.js  quick-docs.html  quick-test-summary.js  readme.html  rollup.config.js  run-all-tests.js  server.js  test-debug.js  test-favicon-check.js  test-favicon-check2.js  test-favicon-final.js  test-index-debug.js  test-index-debug2.js  test-index-debug3.js  test-index-debug4.js  (+6 more)
.github/: dependabot.yml
dbg/: build-metrics.jsonl  function-map.yml
dbg-images/: bitwrench-refactor-review.md
deprecated/: READMEv2.md  quick-docs.html
dev/: 2.0.26-release-planning.md  array_to_taco.md  bccl-component-audit.md  bccl-component-redux.md  bccl-styles-used.md  bitwrench-2.0.14-critque.md  bitwrench-2.0.16-feedback.md  bitwrench-2x-discussion.md  bitwrench-component-lifecycle.md  bitwrench-master-backlog.md  bitwrench-mcp-server-design.md  bitwrench-north-star.md  bitwrench-router-design.md  bitwrench-serve-and-protocol.md  bitwrench-todo.md  bitwrench_agui_a2ui_feedback.md  bitwrench_v2_auto_cleanup_demo.html  bitwrench_v2_bccl.md  (+74 more)
embedded_rust/: Cargo.toml  README.md
embedded_rust/src/: lib.rs
examples/embedded/cmake-demo/: CMakeLists.txt  README.md  main.c
(+499 files in other folders)
